mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-stateful-set
  namespace: development
  labels:
    app: mysql.development
spec:
  serviceName: "mysql"
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql.development
          image: mysql
          ports:
            - containerPort: 3306
          args: ["--default-authentication-plugin=mysql_native_password"]
