mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: development
spec:
  selector:
    app: mysql.development
#  type: LoadBalancer
  ports:
    - protocol: "TCP"
      port: 3306
      targetPort: 3306
