dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: "k8s-dashboard.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80

# https://kubernetes.io/docs/concepts/services-networking/ingress/

# kubectl get ingress -n kubernetes-dashboard --watch
# vim /etc/hosts
# 192.168.64.2 k8s-dashboard.local
