httpd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-ingress
  namespace: development
spec:
  rules:
    - host: "k8s.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: httpd-service
                port:
                  number: 80

# https://kubernetes.io/docs/concepts/services-networking/ingress/
